# claude-code-harness

./: .gitignore  .mcp.json.example  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  E0-IMPL-PIPELINE-PROGRESS-MONITOR-SUMMARY.md  LICENSE  PRD-NATIVE-TEAMS-001.md  PRD-NATIVE-TEAMS-002.md  PRD-TMUX-NAV-001.md  README.md  REPOSITORY_SUMMARY.md  SETUP_GUIDE.md  VALIDATION_AGENT_MONITOR_IMPLEMENTATION.md  docs-gardener.config.json  launch_cobuilder.sh  plan.md  providers.yaml  pyproject.toml  regression-check.sh  requirements.txt  research-openclaw.md  research_reliability_patterns.md  settings.json  test-spec.md  validation-agent-naming-issue.md
.beads/: .beads  issues.jsonl
.claude/: .claude  .gitignore  CLAUDE.md  HEARTBEAT.md  IDENTITY.md  USER.md  capability_model.json  cron.json  heartbeat_costs.json  settings.json
.cobuilder/: tool-sets.yaml
.github/: CODEOWNERS  dependabot.yml
.repomap/: config.yaml
agents/: validation-test-agent.md
cobuilder/: CLAUDE.md  __init__.py  __main__.py  bridge.py  cli.py
docs/: ARCHITECTURE.md  CONFIGURATION.md  EVALUATION.md  MODULES.md  PRD-SYSTEM3-ORCHESTRATOR-AUTONOMY-001.md  PRODUCTION_READINESS.md  README.md  USAGE_GUIDE.md  ZEROREPO_DELTA_DESIGN.md  ZEROREPO_SERENA_DESIGN.md  agent-schema.md  prd-contract-template.md
documentation/: ADR-001-output-style-reliability.md  DECISION_TIME_GUIDANCE.md  (+7 more)
mcp-servers/google-chat-bridge/: pyproject.toml
mcp-servers/google-chat-bridge/src/google_chat_bridge/: __init__.py  __main__.py  chat_client.py  commands.py  formatter.py  message_queue.py  notifications.py  router.py  server.py  state.py  webhook_client.py
(+1552 files in other folders)
