[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zerorepo"
version = "0.1.0"
description = "ZeroRepo - Repository Planning Graph (RPG) for generating complete software repositories"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "litellm>=1.0",
    "jinja2>=3.1",
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]
sandbox = [
    "docker>=7.0",
]
vectordb = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "functional: marks tests as functional (end-to-end) tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zerorepo"]
